--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,14 @@
 
-<nav>
-<!-- <a mat-tab-link routerLink="details-customer" >לטופס      </a>
-<a mat-tab-link routerLink="graph" >גרפים</a>
-<mat-divider></mat-divider> -->
-
-<section>
-  <div class="example-button-row">
-  <button mat-raised-button color="primary" (click)="join()">form</button>
-  <button mat-raised-button color="primary" (click)="graph()">dashboard</button>
-  </div>
-</section>
-</nav>
-<router-outlet></router-outlet>
-
-<!-- <app-details-customer></app-details-customer> -->
-
+<p>
+  <mat-toolbar color="primary">
+    <span class="example-spacer"></span>
+    <section>
+      <div class="example-button-row">
+      <button mat-raised-button color="primary" (click)="join()">form</button>
+      <button mat-raised-button color="primary" (click)="graph()">dashboard</button>
+      </div>
+    </section>
+  </mat-toolbar>
+</p>
+<router-outlet></router-outlet> 
 
