--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,17 +2,17 @@
     display: table;
   }
   
-  .example-label {
+  /* .example-label {
     display: table-cell;
     font-size: 14px;
     margin-left: 8px;
     min-width: 120px;
   }
-  
+   */
   .example-button-row {
     display: table-cell;
-    align-items: center;  
-    left: 40vw;  
+    display: flex; 
+    gap: 0.5vw;
   }
   .mat-tab-group {
     margin-bottom: 48px;
