--- a/src/app/details-customer/details-customer.component.html
+++ b/src/app/details-customer/details-customer.component.html
@@ -105,10 +105,10 @@
     <label for= "date">Enter your date of birth:</label>
     <mat-form-field appearance="outline">
       <mat-label>Choose a date</mat-label>
-      <input matInput [max]='maxdate' [matDatepicker]="picker" formcontrolname="date1" required [(ngModel)]="customer.Birth_date">
-      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-error *ngIf="date1.invalid">{{getErrorMessage10()}}</mat-error>
+      <input matInput [max]='maxdate' [matDatepicker]= "picker" formcontrolname= "date1" name= "date1" id="name1" #date="ngModel" required [(ngModel)]= "customer.Birth_date">
+      <mat-datepicker-toggle matSuffix [for]= "picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
+      <mat-error *ngIf="date1.invalid">{{getErrorMessage10()}}</mat-error>
     </mat-form-field>
   </div>
   <button mat-raised-button color= "primary" type= "submit" class= "buttonsend"  [disabled]= "!formdetails.form.valid">send</button>
